# task2_2025

./: .gitignore  README.md  custom_joined.yaml  evaluation.py  split_files.py  train_yolo.py
baselines/: README.md
baselines/resnet18/: readme.md  requirements.txt
baselines/resnet18/post_process/: metrics_utils.py  post_process_utils.py
baselines/resnet18/postprocess/: args.py  postprocess.py  postprocess_utils.py
baselines/resnet18/predict/: args.py  audio_dataset.py  infer.py  infer_utils.py  loaders.py
baselines/resnet18/preprocess/: args.py  preprocess.py  reannotation_utils.py  split_utils.py  time_utils.py
baselines/resnet18/train/: args.py  loaders.py  metrics_utils.py  toy_train.py  train.py  train_utils.py
baselines/yolo/: README.md  custom.yaml  custom_joined.yaml  dataset_config.json  predict_and_convert_yolo_output.py  preprocess_data.py  pyproject.toml  train_yolo.py
evaluation/: README.md  evaluation.py
