[tool.poetry]
name = "task2-2025"
version = "0.1.0"
description = ""
authors = ["bioDCASE challenge 2 organizing team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
tqdm = "^4.67.1"
comet-ml = "^3.49.5"
ultralytics = "^8.3.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
